more work on notifications

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -17,6 +17,11 @@
         #booking_edit {
             color: white;
         }
+
+    #clock {
+        width: 300px;
+        height: 300px;
+    }
     </style>
 {% endblock extra_head %}
 {% block heading %}Bookings Calendar{% endblock %}
