added webmaster screen and log viewer

--- a/templates/webmaster.html
+++ b/templates/webmaster.html
@@ -12,38 +12,8 @@
 {% block main %}
 
     <div class="row">
-        <div class="col-md-6">
-        
-            <!--notification start-->
-            <section class="panel">
-                <header class="panel-heading">
-                    Last Logins <span class="tools pull-right">
-            <a href="javascript:;" class="fa fa-chevron-down"></a>
-            </span>
-                </header>
-                <div class="panel-body">
-                    <table class="table  table-hover general-table">
-                        <thead>
-                        <tr>
-                            <th> username</th>
-                            <th>Last Login</th>
-                        </tr>
-                        </thead>
-                        <tbody>
 
-                        {%  for item in users %}
-                            <tr>
-                                <td>{{ item.username }}</td>
-                                <td>{{ item.last_login|timesince }}</td>
-                            </tr>
-
-                        {% endfor %}
-                </div>
-            </section>
-            <!--notification end-->
-        </div>
-       
- <div class="col-md-6">
+          <div class="col-md-6">
             <!--todolist start-->
             <section class="panel">
                 <header class="panel-heading">
@@ -56,12 +26,48 @@
 
                     <a href="{{ CELERY_MONITOR_URL }}" class="btn">Celery Monitor</a>
                     <a href="{{ RABBITMQ_MONITOR_URL }}" class="btn">RabbitMq Monitor</a>
+                    <a href="/admin/django_logtail/log/" class="btn">Log Files</a>
 
                 </div>
             </section>
         </div>
-        
-        
+
+
+        <div class="col-md-6">
+
+            <!--notification start-->
+            <section class="panel">
+                <header class="panel-heading">
+                    Last Logins <span class="tools pull-right">
+            <a href="javascript:;" class="fa fa-chevron-down"></a>
+            </span>
+                </header>
+                <div class="panel-body">
+                    <table class="table  table-hover general-table">
+                        <thead>
+                        <tr>
+                            <th> username</th>
+                            <th>Last Activity</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+
+                        {%  for item in users %}
+                            <tr>
+                                <td>{{ item.username }}</td>
+                                <td>{{ item.last_activity|timesince }}</td>
+                            </tr>
+
+                        {% endfor %}
+                    </tbody>
+                    </table>
+                </div>
+            </section>
+            <!--notification end-->
+        </div>
+
+
+
     </div>
 
 {% endblock %}
