--- a/templates/webmaster.html
+++ b/templates/webmaster.html
@@ -22,7 +22,8 @@
             </span>
                 </header>
                 <div class="panel-body">
-                    <a href="/ping/" class="btn">Ping Celery</a>
+                    <a href="/ping/" class="btn btn-primary">Ping Celery</a>
+                    <a href="/check_bookings/" class="btn btn-primary">Check Bookings</a>
 
                     <a href="{{ CELERY_MONITOR_URL }}" class="btn">Celery Monitor</a>
                     <a href="{{ RABBITMQ_MONITOR_URL }}" class="btn">RabbitMq Monitor</a>
