Email logged backend added to notification

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -21,10 +21,10 @@
         .selected {
             background-color: black;
         }
-    #clock {
-        width: 300px;
-        height: 300px;
-    }
+        #clock {
+            width: 300px;
+            height: 300px;
+        }
     </style>
 {% endblock extra_head %}
 {% block heading %}Bookings Calendar{% endblock %}
@@ -66,9 +66,9 @@
                             </div>
                         {% else %}
 
-<div class='message-log' data-items="10" >
+                            <div class='message-log' data-items="10" >
 
-</div>
+                            </div>
 
 
                             {% if user.is_booker %}
@@ -272,15 +272,20 @@
                 limit: 1},
             dataType: 'json',
             success: function (json) {
-                var d = json.objects[0];
 
-                $('#calendar').fullCalendar('renderEvent', {
-                    id: eventid,
-                    start: moment(d.start),
-                    end: moment(d.end),
-                    className: "booking_status_" + d['status']
-                }, true);
 
+                // nothing will be returned if cancelled/forgot event
+                if (json.objects.length > 0) {
+                    var d = json.objects[0];
+
+                    $('#calendar').fullCalendar('renderEvent', {
+                        id: eventid,
+                        start: moment(d.start),
+                        end: moment(d.end),
+                        className: "booking_status_" + d['status']
+                    }, true);
+
+                }
             }
         });
     }
