--- a/templates/notification/booking_requested/full.html
+++ b/templates/notification/booking_requested/full.html
@@ -1,1 +1,6 @@
-Full text
+You have created a new booking: {{ booking.ref }}
+{{ description }}
+
+Full details here: {{ booking.get_absolute_url }}
+
+
