--- a/templates/notification/tuner_request/full.html
+++ b/templates/notification/tuner_request/full.html
@@ -1,4 +1,4 @@
-See full details: <a href="{{ boooking.get_absolute_url }}">Booking Details</a>
+See full details: <a href="{{ current_site.domain }}{{ boooking.get_absolute_url }}">Booking Details</a>
 
 Reply with Yes or No as the first line in the email body.
 
