--- a/templates/notification/booking_requested/full.html
+++ b/templates/notification/booking_requested/full.html
@@ -1,6 +1,6 @@
 You have created a new booking: {{ booking.ref }}
 {{ description }}
 
-Full details here: {{ booking.get_absolute_url }}
+Full details here: {{ current_site.domain }}{{ booking.get_absolute_url }}
 
 
