--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -90,6 +90,7 @@
     </div>
     <!-- TODO:option to hide bookings to easier to create new booking -->
 
+    <!-- TODO:validation to prevent booking being created that does not have a studio -->
 
 
 {% endblock main %}
