aghhhhh timezones - fullcalendar behaves very oddly.  About to experiment.

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
             CLIENT_ID = 0;
         {% endif %}
 
-
+        TZ = "{{ USER_TIME_ZONE }}";
     </script>
 
     {% block extra_head %}
