--- a/templates/web/booking_editable_template.html
+++ b/templates/web/booking_editable_template.html
@@ -1,3 +1,9 @@
+{#{% load tz %}#}
+{##}
+{#{% timezone "Europe/Paris" %}#}
+{#    Paris time: {{ value }}#}
+{#{% endtimezone %}#}
+
 <h3 class="editable_title">
     <span id="field_activity_name">Booking</span>
     for
@@ -41,7 +47,10 @@
 
     for session beginning at
     {% if object.status < '2' %}
-        <a href="#" id="field_deadline_time" class="editable when_time" data-pk="{{ object.ref }}" >{{ deadline_time }}</a>
+        <a href="#" id="field_deadline_time" class="editable when_time"
+           data-pk="{{ object.ref }}"
+           data-date="{{ object.deadline|date:"Y-m-d" }}"
+                >{{ deadline_time }}</a>
     {% else %}
        <span id="field_deadline_time" >{ deadline_time }}</span>
     {% endif %}
@@ -55,7 +64,10 @@
     <br />
 
     To start at
-    <a href="#" id="field_requested_time" class="editable when_time" data-pk="{{ object.ref }}" >{{ requested_time }}</a>
+    <a href="#" id="field_requested_time" class="editable when_time"
+       data-pk="{{ object.ref }}"
+                   data-date="{{ object.requested_from|date:"Y-m-d" }}"
+            >{{ requested_time }}</a>
     duration
     <a href="#" id="field_duration" class="editable duration"
        data-pk="{{ object.ref }}"
